--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,9 +1,7 @@
 name: Upstream Sync
 
 on:
-  schedule:
-    - cron: "0 */6 * * *" # run every 6 hours
-  workflow_dispatch:
+  workflow_dispatch: # 只手動觸發
 
 permissions:
   contents: write
