--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -14,11 +14,11 @@ jobs:
     if: ${{ github.event.repository.fork }}
 
     steps:
-      # Step 1: run a standard checkout action
+      # Step 1: Checkout target repo
       - name: Checkout target repo
         uses: actions/checkout@v4
 
-      # Step 2: run the sync action
+      # Step 2: Sync upstream changes
       - name: Sync upstream changes
         id: sync
         uses: aormsby/Fork-Sync-With-Upstream-action@v3.4.1
@@ -28,12 +28,7 @@ jobs:
           target_sync_branch: main
           target_repo_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Sync check
-        if: failure()
-        run: |
-          echo "[Error] Due to a change in the workflow file of the upstream repository, GitHub has automatically suspended the scheduled automatic update. You need to manually sync your fork."
-          exit 1
-
+      # Step 3: Delete old workflow runs
       - name: Delete workflow runs
         uses: Mattraks/delete-workflow-runs@main
         with:
